# agentshield

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
src/agentshield/: __init__.py  decorator.py  engine.py  exceptions.py  rules.py
src/modelfuzz/: __init__.py  cli.py  decorator.py  engine.py  exceptions.py  rules.py
tests/: test_decorator.py  test_engine.py  test_rules.py
